[gd_scene load_steps=11 format=3 uid="uid://cb6vh3470sj4i"]

[ext_resource type="Script" uid="uid://dg87q5igwda16" path="res://gd/misc/menu/worldmap.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bguk1uktsf6hc" path="res://assets/misc/textures/menu/worldmap2.png" id="2_30vdn"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://assets/misc/fonts/ariblk.ttf" id="3"]
[ext_resource type="AudioStream" uid="uid://dpjaj3xdt5p33" path="res://assets/misc/sounds/uihover.mp3" id="4_30vdn"]
[ext_resource type="AudioStream" uid="uid://xkjvrora085g" path="res://assets/misc/sounds/uipress.mp3" id="5_5awyq"]
[ext_resource type="AudioStream" uid="uid://ckex6l02i2wcl" path="res://assets/misc/sounds/uirelease.mp3" id="6_hhd2k"]
[ext_resource type="Texture2D" uid="uid://ciby07ecbmnm2" path="res://assets/misc/textures/menu/yes.png" id="7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2e73p"]

[sub_resource type="Theme" id="Theme_w4oin"]
default_font = ExtResource("3")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3")
Panel/styles/panel = SubResource("StyleBoxEmpty_2e73p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4g60y"]

[node name="worldmap" type="Node2D"]
script = ExtResource("1")
metadata/_custom_type_script = "uid://ckalqlqpwqpyl"

[node name="Worldmap" type="Sprite2D" parent="."]
position = Vector2(320, 240)
texture = ExtResource("2_30vdn")

[node name="swe" type="Button" parent="."]
offset_left = 291.0
offset_top = 145.0
offset_right = 371.0
offset_bottom = 163.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
disabled = true
text = "Sweden"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="ire" type="Button" parent="."]
offset_left = 253.0
offset_top = 184.0
offset_right = 333.0
offset_bottom = 202.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
disabled = true
text = "Ireland"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="egy" type="Button" parent="."]
offset_left = 345.0
offset_top = 272.0
offset_right = 425.0
offset_bottom = 290.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
disabled = true
text = "Egypt"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="return" type="Button" parent="."]
offset_left = 16.0
offset_top = 448.0
offset_right = 147.0
offset_bottom = 466.0
scale = Vector2(1.20892, 1.20892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
text = "Back to main menu"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="return2" type="Button" parent="."]
offset_left = 520.0
offset_top = 448.0
offset_right = 651.0
offset_bottom = 466.0
scale = Vector2(1.20892, 1.20892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
text = "Trophy Room"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Uihover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_30vdn")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5awyq")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hhd2k")
volume_db = -10.0
mix_target = 2

[node name="Yes" type="Sprite2D" parent="."]
visible = false
position = Vector2(349, 200)
texture = ExtResource("7")

[node name="Yes2" type="Sprite2D" parent="."]
visible = false
position = Vector2(441, 288)
texture = ExtResource("7")

[node name="Yes3" type="Sprite2D" parent="."]
visible = false
position = Vector2(403, 161)
texture = ExtResource("7")

[node name="nyc" type="Button" parent="."]
offset_left = 58.0
offset_top = 232.0
offset_right = 152.0
offset_bottom = 250.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
disabled = true
text = "New York City"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="china" type="Button" parent="."]
offset_left = 509.0
offset_top = 241.0
offset_right = 603.0
offset_bottom = 259.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
text = "China"
alignment = 0
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="swe" to="." method="_on_swe_button_down"]
[connection signal="button_up" from="swe" to="." method="_on_swe_button_up"]
[connection signal="mouse_entered" from="swe" to="." method="_on_swe_mouse_entered"]
[connection signal="pressed" from="swe" to="." method="_on_swe_pressed"]
[connection signal="button_down" from="ire" to="." method="_on_ire_button_down"]
[connection signal="button_up" from="ire" to="." method="_on_ire_button_up"]
[connection signal="mouse_entered" from="ire" to="." method="_on_ire_mouse_entered"]
[connection signal="pressed" from="ire" to="." method="_on_ire_pressed"]
[connection signal="button_down" from="egy" to="." method="_on_egy_button_down"]
[connection signal="button_up" from="egy" to="." method="_on_egy_button_up"]
[connection signal="mouse_entered" from="egy" to="." method="_on_egy_mouse_entered"]
[connection signal="pressed" from="egy" to="." method="_on_egy_pressed"]
[connection signal="button_down" from="return" to="." method="_on_return_button_down"]
[connection signal="button_up" from="return" to="." method="_on_return_button_up"]
[connection signal="mouse_entered" from="return" to="." method="_on_return_mouse_entered"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="button_down" from="return2" to="." method="_on_return_2_button_down"]
[connection signal="button_up" from="return2" to="." method="_on_return_2_button_up"]
[connection signal="mouse_entered" from="return2" to="." method="_on_return_2_mouse_entered"]
[connection signal="pressed" from="return2" to="." method="_on_return_2_pressed"]
[connection signal="button_down" from="nyc" to="." method="_on_nyc_button_down"]
[connection signal="button_up" from="nyc" to="." method="_on_nyc_button_up"]
[connection signal="mouse_entered" from="nyc" to="." method="_on_nyc_mouse_entered"]
[connection signal="pressed" from="nyc" to="." method="_on_nyc_pressed"]
[connection signal="button_down" from="china" to="." method="_on_china_button_down"]
[connection signal="button_up" from="china" to="." method="_on_china_button_up"]
[connection signal="mouse_entered" from="china" to="." method="_on_china_mouse_entered"]
[connection signal="pressed" from="china" to="." method="_on_china_pressed"]
